New startup splash

--- a/app/splash.html
+++ b/app/splash.html
@@ -38,9 +38,9 @@
   min-height: 100vh;
 }
 </style>
-<body style="animation:fadeInOpacity 5s">
+<body style="animation:fadeInOpacity 7s">
     <div class="center-screen">
-        <img style="height:200px;width: 200px;animation: pulse 2s infinite;" draggable="false" src="../img/icon.png" alt="">
+        <img style="height:500px;width: auto;animation: pulse 4s infinite;" draggable="false" src="../img/logo_glow.png" alt="">
     </div>
 </body>
 </html>
