iPod info in home

--- a/app/choose_model.html
+++ b/app/choose_model.html
@@ -98,7 +98,7 @@
 <script>
     function choose(model){
         localStorage.setItem(`model_${sessionStorage.getItem('ipod_name')}`, model)
-        window.location.href = ('./home.html')
+        window.location.href = ('./load_home.html')
     }
 </script>
 </html>
