--- a/app/choose_model.html
+++ b/app/choose_model.html
@@ -62,7 +62,7 @@
             <h1 class="text-2xl text-center text-neutral-800 capitalize lg:text-3xl dark:text-white" id="ipod_name"></h1>
     
             <p class="max-w-2xl mx-auto my-4 text-center text-neutral-500 dark:text-neutral-300">
-                It's the first time you connected this iPod - Let's specify the model
+                Specify the model of this iPod
             </p>
     
             <div class="grid grid-cols-1 gap-8 mt-8 xl:mt-16 md:grid-cols-4 xl:grid-cols-4">
