--- a/app/choose_model.html
+++ b/app/choose_model.html
@@ -56,7 +56,7 @@
 }
     </script>
 </head>
-<body style="background-color: #e0e0e0;" class="text-white noselect" onload="document.title = `Ipodie - ${sessionStorage.getItem('ipod_name')}`; document.getElementById('ipod_name').innerHTML = `${sessionStorage.getItem('ipod_name')}`">
+<body style="background-color: #e0e0e0; animation:fadeInOpacity 2s" class="text-white noselect" onload="document.title = `Ipodie - ${sessionStorage.getItem('ipod_name')}`; document.getElementById('ipod_name').innerHTML = `${sessionStorage.getItem('ipod_name')}`">
     <section id="model" class="flex items-center justify-center h-screen">
         <div class="container px-6 py-10 mx-auto">
             <h1 class="text-2xl text-center text-neutral-800 capitalize lg:text-3xl dark:text-white" id="ipod_name"></h1>
